<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Products</string>

    <string name="error_message">An error occurred. Please try again.</string>

    <string name="select_image">Select Image(optional)</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="product_type">Product Type</string>
    <string name="tax">Tax</string>
    <string name="submit">Submit</string>
    <string name="add_product">Add Product</string>

    <string name="product_name_format">Name: %1\$s</string>
    <string name="product_type_format">Type: %1\$s</string>
    <string name="product_price_format">Price: %1\$s</string>
    <string name="product_tax_format">Tax: %1\$s</string>
    <string name="search_products">Search products</string>
    <string name="error">error</string>
    <string name="product_image">Product Image</string>


</resources>
